test/bad/type0.pacc
/*
nopacc1 "pacc: fatal: type mismatch: \`Digit :: int' cannot call \`Six :: char *'"
*/

/* This is based on the test case for default expressions. It should fail,
 * because the rule Six has the wrong type. */

Answer <- Digit

Digit <- Four / f:Five -> f / Six

Four <- "four" -> 4
Five <- "five" -> 5
Six :: char * <- "six" -> { "string" }
